examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__binary_addition_subtraction_with_floats.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Minus(
                                            Token_Minus {
                                                [RANGE]
                                                _id: 4,
                                                _parent: Some(
                                                    2,
                                                ),
                                            },
                                        ),
                                        left: Float(
                                            Float {
                                                [RANGE]
                                                _id: 3,
                                                _parent: Some(
                                                    2,
                                                ),
                                            },
                                        ),
                                        right: Float(
                                            Float {
                                                [RANGE]
                                                _id: 5,
                                                _parent: Some(
                                                    2,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 2,
                                        _parent: Some(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                                _id: 9,
                                                _parent: Some(
                                                    7,
                                                ),
                                            },
                                        ),
                                        left: Float(
                                            Float {
                                                [RANGE]
                                                _id: 8,
                                                _parent: Some(
                                                    7,
                                                ),
                                            },
                                        ),
                                        right: Float(
                                            Float {
                                                [RANGE]
                                                _id: 10,
                                                _parent: Some(
                                                    7,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 7,
                                        _parent: Some(
                                            6,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 6,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Minus(
                                            Token_Minus {
                                                [RANGE]
                                                _id: 14,
                                                _parent: Some(
                                                    12,
                                                ),
                                            },
                                        ),
                                        left: Float(
                                            Float {
                                                [RANGE]
                                                _id: 13,
                                                _parent: Some(
                                                    12,
                                                ),
                                            },
                                        ),
                                        right: Integer(
                                            Integer {
                                                [RANGE]
                                                _id: 15,
                                                _parent: Some(
                                                    12,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 12,
                                        _parent: Some(
                                            11,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 11,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                                _id: 19,
                                                _parent: Some(
                                                    17,
                                                ),
                                            },
                                        ),
                                        left: Float(
                                            Float {
                                                [RANGE]
                                                _id: 18,
                                                _parent: Some(
                                                    17,
                                                ),
                                            },
                                        ),
                                        right: Integer(
                                            Integer {
                                                [RANGE]
                                                _id: 20,
                                                _parent: Some(
                                                    17,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 17,
                                        _parent: Some(
                                            16,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 16,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Minus(
                                            Token_Minus {
                                                [RANGE]
                                                _id: 24,
                                                _parent: Some(
                                                    22,
                                                ),
                                            },
                                        ),
                                        left: Integer(
                                            Integer {
                                                [RANGE]
                                                _id: 23,
                                                _parent: Some(
                                                    22,
                                                ),
                                            },
                                        ),
                                        right: Float(
                                            Float {
                                                [RANGE]
                                                _id: 25,
                                                _parent: Some(
                                                    22,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 22,
                                        _parent: Some(
                                            21,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 21,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                                _id: 29,
                                                _parent: Some(
                                                    27,
                                                ),
                                            },
                                        ),
                                        left: Integer(
                                            Integer {
                                                [RANGE]
                                                _id: 28,
                                                _parent: Some(
                                                    27,
                                                ),
                                            },
                                        ),
                                        right: Float(
                                            Float {
                                                [RANGE]
                                                _id: 30,
                                                _parent: Some(
                                                    27,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 27,
                                        _parent: Some(
                                            26,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 26,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
    ],
    [RANGE]
    _id: 0,
    _parent: None,
}
