examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__binary_addition_subtraction_with_floats@1-d0.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        right: Float(
                                            Float {
                                                [RANGE]
                                            },
                                        ),
                                        left: Integer(
                                            Integer {
                                                [RANGE]
                                            },
                                        ),
                                        operator: Token_Minus(
                                            Token_Minus {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
