examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__binary_addition_subtraction_with_floats@10-2.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                BinaryOperator(
                                    BinaryOperator {
                                        right: Float(
                                            Float {
                                                [RANGE]
                                            },
                                        ),
                                        left: Float(
                                            Float {
                                                [RANGE]
                                            },
                                        ),
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
